uppdaterade updated price etc